# google_lens_to_mercari

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  README.md  deploy.sh  main.py  package.json  pyproject.toml  tailwind.config.js
.agent/workflows/: deploy_to_cloud_run.md
app/controllers/: main_controller.py
app/models/: config.py  product.py
app/services/: extraction_service.py  lens_service.py  mercari_service.py
app/services/templates/: extraction_prompt.txt
app/templates/: index.html  results.html
static/css/: input.css
tests/e2e/: test_full_flow.py
tests/unit/: test_extraction_service.py  test_lens_service.py  test_mercari_service.py  test_middleware.py
